# sui-vanity-tools

./: Cargo.toml  LICENSE  README.md
src/: main.rs
