[package]
name = "sui-vanity-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16.20"
sui-keys = { git = "https://github.com/MystenLabs/sui.git" }
sui-types = { git = "https://github.com/MystenLabs/sui.git" }
clap = { version = "4.5", features = ["derive"] }
num_cpus = "1.16"
crossbeam-channel = "0.5"
